Dynamic generation of hex tiles, fixed width prob Generating the hexagons dynamically with jQuery now. Solved the problem where making the browser window too narrow screws up the gameboard - I just made a gameBoard div around the whole thing and gave it a specific width and overflow traits of scroll and it's all good!

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+#gameBoard {
+  width: 800px;
+  border: 10px solid brown;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
+
 .hex {
   float: left;
   margin-right: -26px;
